force-app/main/default/objects/Case/fields/Retraction_Processing_Queue__c.field-meta.xml
<CustomField>
    <fullName>Retraction_Processing_Queue__c</fullName>
    <label>Retraction Processing Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>HIS</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>