force-app/main/default/objects/Case/fields/Return_Requested__c.field-meta.xml
<CustomField>
    <fullName>Return_Requested__c</fullName>
    <description>Stores if return is requested for device</description>
    <label>Return Requested?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>