force-app/main/default/objects/Case/fields/Return_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Requested_Date__c</fullName>
    <description>Store the return requested date if return requested  is yes.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Return Requested Date</label>
    <type>Date</type>
</CustomField>