force-app/main/default/objects/Case/fields/RGA_Created__c.field-meta.xml
<CustomField>
    <fullName>RGA_Created__c</fullName>
    <label>RGA Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA (Reference # and Explanation do not apply)</fullName>
                <default>true</default>
                <label>NA (Reference # and Explanation do not apply)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>