force-app/main/default/objects/Case/fields/Sensor_Insertion_Site__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Insertion_Site__c</fullName>
    <description>This field stores the body part of patient when sensor was inserted.</description>
    <label>Sensor Insertion Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arm</fullName>
            </value>
            <value>
                <fullName>Abdomen</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Leg</fullName>
            </value>
            <value>
                <fullName>Thigh</fullName>
            </value>
            <value>
                <fullName>Upper Buttocks</fullName>
            </value>
            <value>
                <fullName>Other – See discussion/resolution</fullName>
            </value>
            <value>
                <fullName>NI</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Unable / Unwilling to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>