force-app/main/default/objects/Case/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Stores the serial number for selected product line</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Receiver Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>