force-app/main/default/objects/Case/fields/Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Level__c</fullName>
    <label>Severity Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Complaint</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Negligible</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Life-Threatening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>