force-app/main/default/objects/Case/fields/Smart_Device__c.field-meta.xml
<CustomField>
    <fullName>Smart_Device__c</fullName>
    <label>Smart Device</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iPhone 7 Plus</fullName>
            </value>
            <value>
                <fullName>iPhone 7</fullName>
            </value>
            <value>
                <fullName>iPhone SE</fullName>
            </value>
            <value>
                <fullName>iPhone 6S</fullName>
            </value>
            <value>
                <fullName>iPhone 6S Plus</fullName>
            </value>
            <value>
                <fullName>iPhone 6 Plus</fullName>
            </value>
            <value>
                <fullName>iPhone 6</fullName>
            </value>
            <value>
                <fullName>iPhone 5S</fullName>
            </value>
            <value>
                <fullName>iPhone 5C</fullName>
            </value>
            <value>
                <fullName>iPhone 5</fullName>
            </value>
            <value>
                <fullName>iPhone 4S</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>iPad Pro</fullName>
            </value>
            <value>
                <fullName>iPad 4</fullName>
            </value>
            <value>
                <fullName>iPad 3</fullName>
            </value>
            <value>
                <fullName>iPad 2</fullName>
            </value>
            <value>
                <fullName>iPad Air 2</fullName>
            </value>
            <value>
                <fullName>iPad Air</fullName>
            </value>
            <value>
                <fullName>iPad Mini 4</fullName>
            </value>
            <value>
                <fullName>iPad Mini 3</fullName>
            </value>
            <value>
                <fullName>iPad Mini 2</fullName>
            </value>
            <value>
                <fullName>iPad Mini</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>iPod Touch 6th Gen</fullName>
            </value>
            <value>
                <fullName>iPod Touch 5th Gen</fullName>
            </value>
            <value>
                <fullName>iPod Touch</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>LG G6</fullName>
            </value>
            <value>
                <fullName>LG G5</fullName>
            </value>
            <value>
                <fullName>LG G4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>