force-app/main/default/objects/Case/fields/Smart_Device_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>Smart_Device_OS_Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Smart Device OS Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>