force-app/main/default/objects/Case/fields/Transmitter_Sub_Component_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Transmitter_Sub_Component_Part_Number__c</fullName>
    <description>Stores the part number for selected product line</description>
    <label>Transmitter Sub-Component Part Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G4 Transmitter Double Board: 9438-01</fullName>
            </value>
            <value>
                <fullName>G4 Transmitter Single Board: 9438-05</fullName>
            </value>
            <value>
                <fullName>G4 Transmitter: Model Unknown</fullName>
            </value>
            <value>
                <fullName>G5 Transmitter 1.2 (MT10103 Rev 009)</fullName>
            </value>
            <value>
                <fullName>G5 Transmitter 1.2 (MT10103 Rev 010)</fullName>
            </value>
            <value>
                <fullName>G5 Transmitter 1.2 (MT10103 Rev 011)</fullName>
            </value>
            <value>
                <fullName>G5 Transmitter 1.2 (MT10103 Rev 012)</fullName>
            </value>
            <value>
                <fullName>G5 Transmitter 1.2 (MT10103 Rev 013)</fullName>
            </value>
            <value>
                <fullName>G5 Transmitter 1.2 (MT10103 Rev 014)</fullName>
            </value>
            <value>
                <fullName>G5 Transmitter Double Board: 9438-06</fullName>
            </value>
            <value>
                <fullName>G5 Transmitter: Model Unknown</fullName>
            </value>
            <value>
                <fullName>G6 Transmitter: 9445-02</fullName>
            </value>
            <value>
                <fullName>G6 Transmitter: Model Unknown</fullName>
            </value>
            <value>
                <fullName>Unable / Unwilling to Answer</fullName>
            </value>
            <value>
                <fullName>NI</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>