force-app/main/default/objects/Case/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <formula>Account.Weight_With_UOM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight</label>
    <type>Text</type>
</CustomField>