force-app/main/default/objects/Case/recordTypes/DE_Case_Complaint.recordType-meta.xml
<RecordType>
    <fullName>DE_Case_Complaint</fullName>
    <active>true</active>
    <businessProcess>DE Support Process</businessProcess>
    <description>Case Record for cases of type complaints</description>
    <label>DE Case Complaint</label>
</RecordType>