force-app/main/default/objects/Case/recordTypes/DE_Case_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>DE_Case_Inquiry</fullName>
    <active>true</active>
    <businessProcess>DE Support Process</businessProcess>
    <description>Case record type for Germany Inquiry support</description>
    <label>DE Case Inquiry</label>
</RecordType>