force-app/main/default/objects/Case/recordTypes/DE_Case_Retraction.recordType-meta.xml
<RecordType>
    <fullName>DE_Case_Retraction</fullName>
    <active>true</active>
    <businessProcess>DE Retraction Process</businessProcess>
    <description>Record type for Order Retraction Cases</description>
    <label>DE Case Retraction</label>
</RecordType>