force-app/main/default/objects/Case/validationRules/Awareness_Date_Cannot_Be_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Awareness_Date_Cannot_Be_Future_Date</fullName>
    <active>true</active>
    <description>Awareness Date cannot be future date</description>
    <errorConditionFormula>Awareness_Date__c &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Awareness Date cannot be a future date</errorMessage>
</ValidationRule>