force-app/main/default/objects/Case/validationRules/Chk_Retraction_Case_Based_On_Odr_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Chk_Retraction_Case_Based_On_Odr_Status</fullName>
    <active>true</active>
    <description>If the Order is not closed then a Retraction case cannot be created</description>
    <errorConditionFormula>AND(
	RecordType.DeveloperName = &apos;DE_Case_Retraction&apos;,
	OR(ISBLANK(Order__c),
	TEXT(Order__r.Status) != &apos;Closed&apos;)
)</errorConditionFormula>
    <errorMessage>Retraction case cannot be created as the Order is not in Closed status.</errorMessage>
</ValidationRule>