force-app/main/default/objects/Case/validationRules/Chk_Retraction_Case_Based_On_Open_Cnt.validationRule-meta.xml
<ValidationRule>
    <fullName>Chk_Retraction_Case_Based_On_Open_Cnt</fullName>
    <active>true</active>
    <description>New retraction case cannot be added if already there is an open retraction case tied to an order.</description>
    <errorConditionFormula>AND(
 ISNEW(),
	Order__r.Count_of_Open_Retraction_Cases__c &gt; 0 
)</errorConditionFormula>
    <errorMessage>There is already an open Retraction Case tied to this Order.</errorMessage>
</ValidationRule>