force-app/main/default/objects/Case/validationRules/Date_of_Medical_Intervention.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Medical_Intervention</fullName>
    <active>true</active>
    <description>Validation rule to make &quot;Date_of_Medical_Intervention__c&quot; field mandatory if &quot;Medical_Intervention__c&quot; picklist value is selected as Yes.</description>
    <errorConditionFormula>TEXT(Medical_Caregiver_Intervention__c) = &quot;Yes&quot; &amp;&amp; 
ISBLANK(Date_Of_Medical_Intervention__c)</errorConditionFormula>
    <errorMessage>Please Enter value for &quot;Date of Medical Intervention&quot; field</errorMessage>
</ValidationRule>