force-app/main/default/objects/Case/validationRules/Date_of_Medical_Intervention_No_FutureDt.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Medical_Intervention_No_FutureDt</fullName>
    <active>true</active>
    <description>Date of Medical Intervention cannot be in the future</description>
    <errorConditionFormula>Date_Of_Medical_Intervention__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Of_Medical_Intervention__c</errorDisplayField>
    <errorMessage>Date of Medical Intervention cannot be a future date.</errorMessage>
</ValidationRule>