force-app/main/default/objects/Case/validationRules/Date_Sensor_Inserted_Cannot_Be_Future_Dt.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Sensor_Inserted_Cannot_Be_Future_Dt</fullName>
    <active>true</active>
    <description>Date Sensor Inserted
- Cannot be in the future
- cannot be after the Date of issue</description>
    <errorConditionFormula>OR
(
 Date_Sensor_Inserted__c &gt;  TODAY() ,
Date_Sensor_Inserted__c &gt;  Date_Of_Issue__c 
)</errorConditionFormula>
    <errorDisplayField>Date_Sensor_Inserted__c</errorDisplayField>
    <errorMessage>Date Sensor Inserted cannot be a future date OR later than Date Of Issue.</errorMessage>
</ValidationRule>