force-app/main/default/objects/Case/validationRules/Inquiry_Fields_Req_Before_Send_To_QA.validationRule-meta.xml
<ValidationRule>
    <fullName>Inquiry_Fields_Req_Before_Send_To_QA</fullName>
    <active>true</active>
    <description>Fields mandatory before updating status to Send To</description>
    <errorConditionFormula>AND( 
ISPICKVAL( Status , &apos;Send To QA&apos;) , 
RecordType.DeveloperName = &apos;DE_Case_Inquiry&apos;, 
OR( 
ISBLANK( TEXT( Severity_Level__c ) ) , 
ISBLANK(  Inquiry_Code_and_Summary__c  ) , 
ISBLANK( TEXT( Product_Line__c ) ) , 
ISBLANK(  Description  )

) 
)</errorConditionFormula>
    <errorMessage>Following fields needs to be filled in 
1) Inquiry Codes and Summary
2) Product Line(s)
3) Severity Level
4) Discussion/Resolution</errorMessage>
</ValidationRule>