force-app/main/default/objects/Case/validationRules/Limit_To_Description_Character.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_To_Description_Character</fullName>
    <active>true</active>
    <description>Description field should not accept more then 8000 characters.</description>
    <errorConditionFormula>LEN(Description) &gt; 8000</errorConditionFormula>
    <errorMessage>Description Field should not contain more then 8000 characters.</errorMessage>
</ValidationRule>