force-app/main/default/objects/Case/validationRules/Patient_Using_Device_Req_At_Send_To_QA.validationRule-meta.xml
<ValidationRule>
    <fullName>Patient_Using_Device_Req_At_Send_To_QA</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( Status , &apos;Send To QA&apos;) , 
RecordType.DeveloperName = &apos;DE_Case_Complaint&apos;, 
ISBLANK( TEXT(  Patient_Using_The_Device_At_Incident__c ) ) 

)</errorConditionFormula>
    <errorMessage>&quot;Patient Using Device At Incident?&quot; value required when status is &quot;Send To QA&quot;</errorMessage>
</ValidationRule>