force-app/main/default/objects/Case/validationRules/Weight_Required_Before_Send_To_QA.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Required_Before_Send_To_QA</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Account.RecordType.DeveloperName = &apos;DE_Consumer&apos;, 
ISPICKVAL( Status , &apos;Send To QA&apos;) , 
RecordType.DeveloperName = &apos;DE_Case_Complaint&apos;, 
ISBLANK(Weight__c ) 
)</errorConditionFormula>
    <errorMessage>Please update the Weight on Account before updating Status to &quot;Send To QA&quot;</errorMessage>
</ValidationRule>