force-app/main/default/objects/Case/listViews/DE_Billing_Case.listView-meta.xml
<ListView>
    <fullName>DE_Billing_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>DE Billing</label>
    <language>en_US</language>
    <queue>DE_Billing</queue>
    <sharedTo>
        <group>DE_Billing</group>
    </sharedTo>
</ListView>